<resources>
    <string name="app_name">Tutorist</string>
    <string name="button_name">Get Started!</string>
    <string name="welcome_1">Welcome to</string>
    <string name="welcome_2">TUTORIST</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="chooseuser">Are you a: </string>
    <string name="tutor"> Tutor </string>
    <string name="student"> Student </string>
    <string name="or"> or </string>

    <string name="info"> Please provide the following: </string>
    <string name="firstname"> First Name  </string>
    <string name="lastname"> Last Name  </string>
    <string name="email"> Email address </string>
    <string name="phone"> Phone number </string>
    <string name="todo">TODO</string>

    <string name="done">Click below to Login!</string>
    <string name="thanks">Thank you for signing up as a tutor!</string>
    <string name="thanks2">Thank you for signing up as a student!</string>


    <string name="login">Go to Login</string>

    <string name="display">Here are available tutors: </string>
    <string name="display_st">Click below to change your subject choice...(e.g. PHYS151, CPSC250) </string>

    <string-array name="user_type">
        <item>Tutor</item>
        <item>Student</item>
    </string-array>


</resources>
